compiler/tools/fpp-check/test/state_machine/typed_elements/state_entry_bad_action_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/state_entry_bad_action_type.fpp:5.16
    entry do { a }
               ^
error: type mismatch at entry actions
type of entry actions is None
type of action is U32
